LOG:

20100208 - 0.3.9 fixed bugs # 2907562, # 2907545 

20100131 - 0.3.8 bug # 2907548 fix

20100129 - 0.3.7 removed "Oracle's cdemo81 sample and its cdemo81_lixa derivated
                 sample: no more intellectual property possible issues..."

20100128 - 0.3.6 bug # 2907542 fix

20100101 - 0.3.5 bug # 2907537 fix

20091212 - 0.3.4 bug # 2912287 fix

20091210 - 0.3.3 bug # 2907554 fix
                 bug # 2907552 fix

20091208 - 0.3.2 bug # 2909089 fix

20091202 - 0.3.0 release; all "tx_" functions are available, many are dummies

20090330 - 0.1.0 first very early release, the daemon compiles and run, but is
           useless

TODO:
2009032901
liblixacommon is compiled with POSIX thread enabled; when a non POSIX
thread enable version of "client" will be released, liblixacommon must be
double compiled (single and multithread)

2009040701
lixad_conf.xml should be validated against a DTD or a schema to detect
malformed configuration files

2009040702
lixad should be able to run as a console process, not only as a daemon, for
debug purpouses. It's sufficient to skip "daemonize()" function and it seems
all works in console environment
*** SOLVED *** 20100228: see -d command line option for lixad pro

2009051201
client status collection index could use a double array instead of allocating
and freeing the array every time insert/delete operation is asked

2009051401
a client that performs a lot of tx_open/tx_close can saturate all the available
TCP/IP connection and "connect" functions fail.
SO_LINGER could be a "solution", but this may generate different issues as
W. Richard Stevens explained in "UNIX network programming".

2009081601
conditional compilation should allow to compile/not compile Oracle related
stuff; unfortunately I was not able to set AM_CONDITIONAL properly to address
the result. It must be reworked later.
*** SOLVED *** 20090925: now conditional compilation works fine for Oracle
related stuff.

2009101001